--- a/css/styles.css
+++ b/css/styles.css
@@ -11856,6 +11856,10 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .navbar-inverse {
   background-color: rgba(34, 34, 34, 0.9);
 }
@@ -11935,13 +11939,29 @@ body {
 }
 
 .footer-above {
-  padding-top: 50px;
+  padding-top: 20px;
   background-color: #2c3e50;
   color: #eeeeee;
 }
 
 .btn-social-icon {
   margin: 2px;
+}
+
+.link-politica {
+  font-size: 0.8em;
+  font-weight: bold;
+  color: #111;
+}
+
+.link-politica:hover {
+  color: #000;
+}
+
+.footer-copy {
+  margin-top: 20px;
+  font-size: 0.7em;
+  font-style: italic;
 }
 
 .marte {
